# document_agent_cli

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/cli/: __init__.py  admin_cli.py  user_cli.py
scripts/: admin_cli.sh  agent_cli.sh  setup_permissions.py  user_cli.sh
test_data/: AI.docx  SATCOM.md
