[project]
name = "document_agent_cli"
version = "0.1.0"
description = "CLI for the document agent service."
authors = [
    {name = "Leslie Ricardo de la Rosa", email = "leslie_ricardo@hotmail.com"},
]
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]


[tool.pdm]
distribution = true

[tool.pdm.scripts]
agent_cli = "scripts/agent_cli.sh"
admin_cli = "scripts/admin_cli.sh"
setup_permissions = "python3 scripts/setup_permissions.py"

[tool.pdm.hooks]
post_install = "pdm run setup_permissions"
